# GithubStars

Parser/: CMakeLists.txt
Parser.xcodeproj/: project.pbxproj
Parser.xcodeproj/project.xcworkspace/xcuserdata/eugene.xcuserdatad/: UserInterfaceState.xcuserstate
Parser.xcodeproj/xcuserdata/eugene.xcuserdatad/xcschemes/: Parser.xcscheme  xcschememanagement.plist
Parser/dep/curl/: INSTALL_RECEIPT.json
Parser/dep/curl/lib/: libcurl.4.dylib
Parser/include/: CurlWrapper.hpp  Search.hpp
Parser/src/: CurlWrapper.cpp  Search.cpp  main.cpp
